--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "antd": "^5.10.2",
+    "antd": "^5.12.4",
     "antd-img-crop": "^4.17.0",
     "axios": "^1.5.1",
+    "dompurify": "^3.0.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.10.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
